# dea-burn-severity

./: .gitignore  Dockerfile  README.md  constraints.txt  pyproject.toml  requirements.txt
.github/workflows/: dea-burn-severity-image.yaml
config/: README.md  dea_burn_severity_processing.yaml
notebook/: Burn_severity_workflow_V8.ipynb  burn_severity_notebook_helper.py
src/dea_burn_severity/: Burn_severity_workflow_V8.ipynb  README.md  __init__.py  burn_severity_config.py  burn_severity_notebook_helper.py  burn_severity_processing.py  cli.py  configuration.py  data_loading.py  database.py  date_time.py  logging_utils.py  new_cli.py  result_io.py  severity.py
src/dea_burn_severity/config/: dea_burn_severity_processing.yaml
tests/: test_configuration.py  test_data_loading.py  test_result_io.py  test_severity.py
